--- a/index.html
+++ b/index.html
@@ -57,36 +57,44 @@
 
 <section>
   <h2>👩‍💻 Sobre mí</h2>
-  <p>
-    Soy estudiante del SENA con conocimientos en programación y desarrollo de software.
-    Este portafolio presenta algunos de los proyectos realizados como parte de mi proceso de aprendizaje.
-  </p>
+ <p>
+Soy <strong>egresada del SENA</strong> como <strong>Tecnóloga en Análisis y Desarrollo de Software</strong>.
+Este portafolio presenta proyectos académicos y personales desarrollados durante mi formación,
+donde aplico conocimientos en programación, lógica de desarrollo, bases de datos y creación de soluciones de software.
+</p>
 </section>
 
 <section>
   <h2>📂 Proyectos</h2>
 
-  <div class="proyecto">
-    <h3>Proyecto 1 – Nombre del proyecto</h3>
-    <p><strong>Descripción:</strong> Breve explicación de qué hace el proyecto.</p>
-    <p><strong>Tecnologías:</strong> HTML, CSS, JavaScript</p>
-    <a href="#" target="_blank">🔗 Ver código</a>
-    <a href="#" target="_blank">🌐 Ver proyecto</a>
-  </div>
+ <div class="proyecto">
+<h3>Diseño de Página Bancolombia (Práctica)</h3>
+<p><strong>Descripción:</strong> Desarrollo del diseño visual y la estructura de una página inspirada en Bancolombia, realizada con fines académicos y de práctica. Se trabajó la maquetación, estilos y organización de la información, sin funcionalidades bancarias reales.</p>
+<p><strong>Tecnologías:</strong> HTML, CSS, Javascript</p>
+<a href="#" target="_blank">🔗 Ver código</a>
+</div>
 
-  <div class="proyecto">
-    <h3>Proyecto 2 – Nombre del proyecto</h3>
-    <p><strong>Descripción:</strong> Qué problema soluciona o qué funcionalidad tiene.</p>
-    <p><strong>Tecnologías:</strong> PHP, MySQL</p>
-    <a href="#" target="_blank">🔗 Ver código</a>
-  </div>
+<div class="proyecto">
+<h3>Consumo de API – Rick and Morty</h3>
+<p><strong>Descripción:</strong> Aplicación que consume la API pública de Rick and Morty para mostrar información de personajes, como nombre, imagen y estado. Proyecto enfocado en el consumo de APIs y manejo de datos externos.</p>
+<p><strong>Tecnologías:</strong> HTML, CSS, JavaScript</p>
+<a href="#" target="_blank">🔗 Ver código</a>
+</div>
+
+<div class="proyecto">
+<h3>Tienda Virtual tipo Shein</h3>
+<p><strong>Descripción:</strong> Desarrollo de una tienda virtual tipo <em>e-commerce</em>, inspirada en plataformas como Shein. El proyecto incluye catálogo de productos, carrito de compras, estructura de vistas y lógica básica para la gestión de productos.</p>
+<p><strong>Tecnologías:</strong> HTML, CSS, JavaScript, Laravel</p>
+<a href="#" target="_blank">🔗 Ver código</a>
+<a href="#" target="_blank">🌐 Ver proyecto</a>
+</div>
 
 </section>
 
 <section>
   <h2>📫 Contacto</h2>
-  <p>Email: tucorreo@email.com</p>
-  <p>GitHub: https://github.com/tuusuario</p>
+  <p>Email: enelisurieles15@gmail.com</p>
+  <p>GitHub: https://github.com/Nlis1</p>
 </section>
 
 <footer>
