--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ donde aplico conocimientos en programación, lógica de desarrollo, bases de dat
 <h3>Consumo de API – Rick and Morty</h3>
 <p><strong>Descripción:</strong> Aplicación que consume la API pública de Rick and Morty para mostrar información de personajes, como nombre, imagen y estado. Proyecto enfocado en el consumo de APIs y manejo de datos externos.</p>
 <p><strong>Tecnologías:</strong> HTML, CSS, JavaScript</p>
-<a href="#" target="_blank">🔗 Ver código</a>
+<a href="https://nlis1.github.io/apirickandmorty/" target="_blank">🌐 Ver proyecto</a>
 </div>
 
 <div class="proyecto">
