--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@ donde aplico conocimientos en programación, lógica de desarrollo, bases de dat
   <h2>📂 Proyectos</h2>
 
  <div class="proyecto">
-<h3>Diseño de Página Bancolombia (Práctica)</h3>
-<p><strong>Descripción:</strong> Desarrollo del diseño visual y la estructura de una página inspirada en Bancolombia, realizada con fines académicos y de práctica. Se trabajó la maquetación, estilos y organización de la información, sin funcionalidades bancarias reales.</p>
-<p><strong>Tecnologías:</strong> HTML, CSS, Javascript</p>
-<a href="#" target="_blank">🔗 Ver código</a>
+<h3>Página Web de Comida con Carrito de Compras</h3>
+<p><strong>Descripción:</strong> Desarrollo de una página web de comida que integra el consumo de una API para mostrar productos dinámicamente. El proyecto cuenta con catálogo organizado por categorías, carrito de compras y diseño responsivo, realizado con fines académicos y de práctica.</p>
+<p><strong>Tecnologías:</strong> HTML, CSS, JavaScript</p>
+<a href="https://nlis1.github.io/Pagina-de-comida/" target="_blank">🌐 Ver proyecto</a>
 </div>
 
 <div class="proyecto">
@@ -85,8 +85,7 @@ donde aplico conocimientos en programación, lógica de desarrollo, bases de dat
 <h3>Tienda Virtual tipo Shein</h3>
 <p><strong>Descripción:</strong> Desarrollo de una tienda virtual tipo <em>e-commerce</em>, inspirada en plataformas como Shein. El proyecto incluye catálogo de productos, carrito de compras, estructura de vistas y lógica básica para la gestión de productos.</p>
 <p><strong>Tecnologías:</strong> HTML, CSS, JavaScript, Laravel</p>
-<a href="#" target="_blank">🔗 Ver código</a>
-<a href="#" target="_blank">🌐 Ver proyecto</a>
+<a href="" target="_blank">🔗 Ver código</a>
 </div>
 
 </section>
