--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ donde aplico conocimientos en programación, lógica de desarrollo, bases de dat
 <h3>Tienda Virtual tipo Shein</h3>
 <p><strong>Descripción:</strong> Desarrollo de una tienda virtual tipo <em>e-commerce</em>, inspirada en plataformas como Shein. El proyecto incluye catálogo de productos, carrito de compras, estructura de vistas y lógica básica para la gestión de productos.</p>
 <p><strong>Tecnologías:</strong> HTML, CSS, JavaScript, Laravel</p>
-<a href="" target="_blank">🔗 Ver código</a>
+<a href="https://github.com/Nlis1/sistema_ventas.git" target="_blank">🔗 Ver código</a>
 </div>
 
 </section>
