--- a/index.html
+++ b/index.html
@@ -51,15 +51,15 @@
 <body>
 
 <header>
-  <h1>Portafolio de Programación</h1>
-  <p>Proyectos desarrollados durante mi formación</p>
-</header>
+  <h1>PORTAFOLIO DEP ROGRAMACIÓN</h1>
+  <p>Proyectos Desarrollados Durante Mi Formación, y de Manera Independiente</p>
+</header
 
 <section>
   <h2>👩‍💻 Sobre mí</h2>
  <p>
 Soy <strong>egresada del SENA</strong> como <strong>Tecnóloga en Análisis y Desarrollo de Software</strong>.
-Este portafolio presenta proyectos académicos y personales desarrollados durante mi formación,
+Este portafolio presenta proyectos académicos desarrollados durante mi fromación e independientes,
 donde aplico conocimientos en programación, lógica de desarrollo, bases de datos y creación de soluciones de software.
 </p>
 </section>
@@ -69,21 +69,21 @@ donde aplico conocimientos en programación, lógica de desarrollo, bases de dat
 
  <div class="proyecto">
 <h3>Página Web de Comida con Carrito de Compras</h3>
-<p><strong>Descripción:</strong> Desarrollo de una página web de comida que integra el consumo de una API para mostrar productos dinámicamente. El proyecto cuenta con catálogo organizado por categorías, carrito de compras y diseño responsivo, realizado con fines académicos y de práctica.</p>
+<p><strong>Descripción:</strong> Desarrollo de una página web de comida que integra el consumo de una API para mostrar productos dinámicamente. El proyecto cuenta con catálogo organizado por categorías, carrito de compras y diseño responsivo, realizado de forma independiente.</p>
 <p><strong>Tecnologías:</strong> HTML, CSS, JavaScript</p>
 <a href="https://nlis1.github.io/Pagina-de-comida/" target="_blank">🌐 Ver proyecto</a>
 </div>
 
 <div class="proyecto">
 <h3>Consumo de API – Rick and Morty</h3>
-<p><strong>Descripción:</strong> Aplicación que consume la API pública de Rick and Morty para mostrar información de personajes, como nombre, imagen y estado. Proyecto enfocado en el consumo de APIs y manejo de datos externos.</p>
+<p><strong>Descripción:</strong> Aplicación que consume la API pública de Rick and Morty para mostrar información de personajes, como nombre, imagen y estado. Proyecto independiente, enfocado en el consumo de APIs y manejo de datos externos.</p>
 <p><strong>Tecnologías:</strong> HTML, CSS, JavaScript</p>
 <a href="https://nlis1.github.io/apirickandmorty/" target="_blank">🌐 Ver proyecto</a>
 </div>
 
 <div class="proyecto">
-<h3>Tienda Virtual tipo Shein</h3>
-<p><strong>Descripción:</strong> Desarrollo de una tienda virtual tipo <em>e-commerce</em>, inspirada en plataformas como Shein. El proyecto incluye catálogo de productos, carrito de compras, estructura de vistas y lógica básica para la gestión de productos.</p>
+<h3>Tienda Virtual Tipo Shein</h3>
+<p><strong>Descripción:</strong> Desarrollo de una tienda virtual tipo <em>e-commerce</em>, inspirada en plataformas como Shein. El proyecto incluye catálogo de productos, carrito de compras, estructura de vistas y lógica básica para la gestión de productos. Proyecto académico</p>
 <p><strong>Tecnologías:</strong> HTML, CSS, JavaScript, Laravel</p>
 <a href="https://github.com/Nlis1/sistema_ventas.git" target="_blank">🔗 Ver código</a>
 </div>
@@ -97,7 +97,7 @@ donde aplico conocimientos en programación, lógica de desarrollo, bases de dat
 </section>
 
 <footer>
-  <p>© 2025 – Portafolio académico</p>
+  <p>© 2025 – Portafolio académico e independiente</p>
 </footer>
 
 </body>
