--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <header>
   <h1>PORTAFOLIO DEP ROGRAMACIÓN</h1>
   <p>Proyectos Desarrollados Durante Mi Formación, y de Manera Independiente</p>
-</header
+</header>
 
 <section>
   <h2>👩‍💻 Sobre mí</h2>
