--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <body>
 
 <header>
-  <h1>PORTAFOLIO DEP ROGRAMACIÓN</h1>
+  <h1>PORTAFOLIO DEL ROGRAMACIÓN</h1>
   <p>Proyectos Desarrollados Durante Mi Formación, y de Manera Independiente</p>
 </header>
 
