--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 <header>
   <h1>PORTAFOLIO DE PROGRAMACIÓN</h1>
-  <p>Proyectos Desarrollados Durante Mi Formación, y de Manera Independiente</p>
+  <p>Proyectos Desarrollados Durante Mi Formación Academica, y de Manera Independiente</p>
 </header>
 
 <section>
